--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name"  : "Zer0-Framework/FastCGI",
+    "name"  : "zer0-framework/fastcgi",
     "type"  : "library",
     "keywords": ["Zer0", "highload"],
-    "homepage": "https://github.com/Zer0-Framework/FastCGI",
+    "homepage": "https://github.com/zer0-framework/fastcgi",
     "license" : "GPL-3.0-or-later",
     "description": "",
     "authors" : [
@@ -14,11 +14,11 @@
     ],
     "support" : {
         "email" : "kak.serpom.po.yaitsam@gmail.com",
-        "issues": "https://github.com/Zer0-Framework/FastCGI/issues"
+        "issues": "https://github.com/zer0-framework/fastcgi/issues"
     },
     "require": {
         "php": ">=7.2",
-        "Zer0-Framework/Zer0": "*"
+        "zer0-framework/core": "*"
     },
     "autoload": {
         "classmap": ["src/"]
